<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_unsolved_label">Unsolved</string>
    <string name="call_police">Call police</string>
    <string name="empty_title_warning">Title cannot be empty</string>
    <string name="content_description_time_picker">Time picker</string>
    <string name="add_new_crime">New Crime</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="select_suspect">Select suspect</string>
    <string name="share_crime_report">Share crime report</string>
    <string name="crime_report_title">Crime Report</string>
    <string name="crime_report_text">%s. The crime was discovered on %s. %s, and %s.</string>
    <string name="solved_case_subtext">The case is solved</string>
    <string name="unsolved_case_subtext">The case is unsolved</string>
    <string name="unknown_suspect_subtext">there is no suspect</string>
    <string name="known_suspect_subtext">the suspect is %s</string>
    <string name="capture_image">Capture image</string>
    <string name="crime_image_set">Crime image (set)</string>
    <string name="crime_image_unset">Crime image (not set)</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="no_camera_app_available">No camera app is available</string>
    <string name="item_crime_list_description">%s Crime %s, dated %s"</string>
    <string name="crime_image_successful_update_feedback">Crime image updated with the captured image</string>
    <string name="crime_image_failed_update_feedback">Failed to update crime image</string>
</resources>