<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/crime_title_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"/>

    <EditText
        android:id="@+id/crime_title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <TextView
        android:id="@+id/crime_details_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/crime_details_label"/>

    <LinearLayout
        android:id="@+id/date_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <Button
            android:id="@+id/crime_date_picker_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="Fri Aug 11 02:22 IST 2023"/>

        <ImageView
            android:id="@+id/crime_time_picker_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/content_description_time_picker"
            android:src="@drawable/icon_time_picker"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/crime_solved_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"/>

</LinearLayout>